--- a/templates/default/config.toml
+++ b/templates/default/config.toml
@@ -8,3 +8,6 @@ highlight-color = "#73bed3"
 background-color = "#121414"
 autoreload = "1"
 custom-color = "#f3a833"
+subheader-text = "SecureHub — curated cybersecurity news"
+# To show a GitHub corner linking to your repo, uncomment the next line.
+# repo-url = "https://github.com/krisbogaerts/news-securehub"
