--- a/templates/default/config.toml
+++ b/templates/default/config.toml
@@ -9,5 +9,7 @@ background-color = "#121414"
 autoreload = "1"
 custom-color = "#f3a833"
 subheader-text = "SecureHub — curated cybersecurity news"
-# To show a GitHub corner linking to your repo, uncomment the next line.
-# repo-url = "https://github.com/krisbogaerts/news-securehub"
+# To show a GitHub corner linking to your repo, set the URL below.
+repo-url = "https://github.com/krisbogaerts/news-securehub"
+# Set a custom header icon (SVG). Put the file under templates/default/include/assets/.
+header-svg = "./assets/logo.svg"
